--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,5 @@
 {
-  "trailingComma": "all",
-  "tabWidth": 2,
-  "printWidth": 150,
-  "semi": true,
-  "singleQuote": true
+    "printWidth": 150,
+    "tabWidth": 4,
+    "semi": true
 }
