--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "validate": "svelte-check --ignore src/node_modules/@sapper"
     },
     "dependencies": {
+        "aos": "3.0.0-beta.6",
         "compression": "^1.7.1",
         "polka": "next",
         "sirv": "^1.0.0"
